--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "start": "echo \"No start script\" && exit 1",
-    "test": "c8 ava test/*.js -w"
+    "test": "jest --coverage test/"
   },
   "author": "Ravi Gairola <mallox@pyxzl.net",
   "license": "MIT",
@@ -17,7 +17,6 @@
     "apollo-server": "^3.13.0"
   },
   "devDependencies": {
-    "ava": "^5.3.1",
-    "c8": "^8.0.1"
+    "jest": "^27.0.6"
   }
 }
