--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.0",
-    "apollo-server-express": "^3.13.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "fastify": "^4.24.3",
+    "@fastify/cors": "^8.4.1",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
-    "subscriptions-transport-ws": "^0.11.0"
+    "mercurius": "^13.3.0"
   },
   "devDependencies": {
     "jest": "^27.0.6"
