--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.1",
     "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "graphql-subscriptions": "^2.0.0",
     "mercurius": "^13.3.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.23.3",
+    "@types/jest": "^29.5.10",
     "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.54.0",
     "jest": "^29.7.0"
   }
 }
