--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@aiswarm/api-graphql",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "keywords": [ "@aiswarm:plugin" ],
+  "keywords": [
+    "@aiswarm:plugin"
+  ],
   "scripts": {
     "start": "echo \"No start script\" && exit 1",
     "test": "jest --coverage test/"
