--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "echo \"No start script\" && exit 1",
     "test": "jest --coverage test/"
   },
-  "author": "Ravi Gairola <mallox@pyxzl.net",
+  "author": "Ravi Gairola <mallox@pyxzl.net>",
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.0",
